--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,9 @@
 address = "0.0.0.0"
 port = 8501
 headless = true
+enableCORS = false
+enableXsrfProtection = false
+fileWatcherType = "none"
 
 [browser]
 gatherUsageStats = false
