skip building sqlite db on container creation

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Clinical Immune Cell Analysis Dashboard",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
-  "postCreateCommand": "python -m pip install -r requirements.txt && python analysis-dashboard/load_cell_counts.py",
+  "postCreateCommand": "python -m pip install -r requirements.txt",
   "forwardPorts": [8501],
   "portsAttributes": {
     "8501": {
