--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,13 @@
 {
   "name": "Clinical Immune Cell Analysis Dashboard",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
+  "postCreateCommand": "python -m pip install -r requirements.txt",
   "postStartCommand": "bash -lc 'make build-db && nohup streamlit run analysis-dashboard/streamlit_app.py --server.port 8501 --server.address 0.0.0.0'",
   "forwardPorts": [8501],
   "portsAttributes": {
     "8501": {
       "label": "Streamlit",
-      "onAutoForward": "openBrowser"
+      "onAutoForward": "notify"
     }
   },
   "customizations": {
