--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
   "name": "Clinical Immune Cell Analysis Dashboard",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
-  "postStartCommand": "bash -lc 'make build-db && nohup streamlit run analysis-dashboard/streamlit_app.py --server.port 8501 --server.address 0.0.0.0'",
+  "postCreateCommand": "bash -lc 'make install'",
+  "postStartCommand": "bash -lc 'make build-db && nohup python -m streamlit run analysis-dashboard/streamlit_app.py --server.port 8501 --server.address 0.0.0.0'",
   "forwardPorts": [8501],
   "portsAttributes": {
     "8501": {
