--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,13 @@
 {
   "name": "Clinical Immune Cell Analysis Dashboard",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
-  "postCreateCommand": "bash -lc 'make install'",
+  "mounts": [
+    "source=teiko-cache,target=/workspaces/.cache,type=volume"
+  ],
+  "containerEnv": {
+    "PIP_CACHE_DIR": "/workspaces/.cache/pip"
+  },
+  "postCreateCommand": "bash -lc 'mkdir -p /workspaces/.cache/pip && make install'",
   "postStartCommand": "bash -lc 'make build-db'",
   "postAttachCommand": "bash -lc \"nohup python -m streamlit run analysis-dashboard/streamlit_app.py --server.port 8501 --server.address 0.0.0.0 >/tmp/dashboard.log 2>&1 </dev/null & disown\"",
   "forwardPorts": [8501],
