Change Streamlit port forwarding behavior from notify to openBrowser

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
   "portsAttributes": {
     "8501": {
       "label": "Streamlit",
-      "onAutoForward": "notify"
+      "onAutoForward": "openBrowser"
     }
   },
   "customizations": {
